@@ -7939,6 +7939,12 @@ endlocal</pre>
             </thead>
             <tbody>
             <tr>
+                <td>defaultlabel</td>
+                <td>No</td>
+                <td>value to return if property file doesn't exist. if not specified and file doesn't exist
+                an exception is thrown.</td>
+            </tr>
+            <tr>
                 <td>propertyfile</td>
                 <td>Yes</td>
                 <td>the property file to read.</td>
